<?xml version="1.0"?>
<package>
  <name>pacman-DR53</name>
  <version>0.0.0</version>
  <description>The pacman-DR53 package</description>

  <maintainer email="cjrosales@gmail.com">Carlos J. Rosales</maintainer>
  <maintainer email="hamal.marino@gmail.com">Hamal Marino</maintainer>
  <maintainer email="fspinelli@gmail.com">Federico Spinelli</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>